# appledeepdoc-mcp

./: pyproject.toml  run.sh
appledeepdoc_mcp/: config.py  main.py  tools.py
appledeepdoc_mcp/design/: human_interface_guidelines.py
appledeepdoc_mcp/docs/: apple_docs.py  local_docs.py
appledeepdoc_mcp/evolution/: swift_evolution.py
appledeepdoc_mcp/repos/: swift_repos.py
appledeepdoc_mcp/suggestions/: suggestions.py
appledeepdoc_mcp/wwdc/: wwdc_notes.py
