[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "appledeepdocs-mcp"
version = "0.1.0"
description = "MCP server for accessing Apple's hidden Xcode documentation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "xcode", "documentation", "apple", "swift", "swiftui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.1.0",
]
[project.scripts]
appledeepdoc = "appledeepdoc_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["appledeepdoc_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "appledeepdoc_mcp",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
